# quant-stock

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  pyproject.toml  pyrightconfig.json  strategy.py
doc/: akquant_data_prep.md  basket_baseline_report.md  event_portfolio_report.md  five_experiments_report.md  gain_threshold_report.md  nt_buy_elasticity_report.md  nt_buy_signals_backtest.md  nt_buy_signals_backtest_v2.md  nt_sell_signals_backtest.md  nt_sell_signals_backtest_v2.md  strategy_backtest_daily_hfq.ipynb  vbt_stoploss_matrix_report.md  vbt_tp_matrix_report.md  小市值.md
scripts/: _debug_elasticity.py  _load_env.py  _test_ch_insert.py  analyze_gain_threshold.py  analyze_insider_buying.py  analyze_kcb_bubble.py  backtest_bank_high_dividend_vs_hs300.py  backtest_basket_baseline.py  backtest_buy_elasticity.py  backtest_cmb_hold_vs_hs300.py  backtest_event_portfolio.py  backtest_nt_buy_signals.py  backtest_nt_sell_signals.py  backtest_small_cap_lake.py  build_lake_adj_factor_daily_parquet.py  fetch_bank_pe_dividend_akshare.py  find_esg_top_hs300.py  find_multibagger_10x_5y_with_dividend.py  find_sentiment_gap.py  find_stock_ma120.py  five_experiments.py  get_small_cap_financials.py  insider_buying_analysis.csv  load_adj_factor_to_clickhouse.py  load_etf_1min_to_clickhouse.py  load_etf_info_to_clickhouse.py  load_index_1min_to_clickhouse.py  load_stock_1min_to_clickhouse.py  load_stock_adj_factor_to_clickhouse.py  load_tushare_dim_to_ch.py  screen_undervalued_phase1.py  screen_undervalued_phase2.py  small_cap_growth_report.md  study_china_permanent_portfolio.py  (+4 more)
(+102 files in other folders)
